# Lightspeed

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: Application.cpp  Application.hpp  Block.cpp  Block.hpp  MenuState.cpp  MenuState.hpp  PlayState.cpp  PlayState.hpp  Player.cpp  Player.hpp  State.hpp  Strip.cpp  Strip.hpp  Utility.hpp  main.cpp
